# CppPluginFramework

./: .gitignore  README.md
code/: CMakeLists.txt
code/cmake/: CodeCoverage.cmake  CppPluginFrameworkConfig.cmake
code/inc/CppPluginFramework/: AbstractPlugin.hpp  ConfigFile.hpp  EnvironmentVariables.hpp  IPlugin.hpp  IPluginFactory.hpp  LibraryExport.hpp  LoggingCategories.hpp  Plugin.hpp  PluginConfig.hpp  PluginExport.hpp  PluginFactoryTemplate.hpp  PluginInstanceConfig.hpp  PluginManager.hpp  PluginManagerConfig.hpp  PluginSharedExport.hpp  Validation.hpp  VersionInfo.hpp
code/src/: AbstractPlugin.cpp  ConfigFile.cpp  EnvironmentVariables.cpp  LogHelper.hpp  LoggingCategories.cpp  Plugin.cpp  PluginConfig.cpp  PluginInstanceConfig.cpp  PluginManager.cpp  PluginManagerConfig.cpp  Validation.cpp  VersionInfo.cpp
code/tests/: CMakeLists.txt
code/tests/integration/: CMakeLists.txt
code/tests/integration/Plugin/: CMakeLists.txt  testPlugin.cpp
code/tests/integration/PluginManager/: CMakeLists.txt  TestData.qrc  testPluginManager.cpp
code/tests/integration/PluginManager/TestData/: AppConfig.json  AppConfigWithInvalidStartupOrder.json  InvalidConfigWithUnsupportedDependency.json
code/tests/integration/PluginManager/data/: AppConfig.json  InvalidAppConfig1.json  InvalidAppConfig2.json  InvalidAppConfig3.json
code/tests/integration/TestPlugins/: CMakeLists.txt  ITestPlugin1.hpp  ITestPlugin2.hpp  TestPlugin1.cpp  TestPlugin1.hpp  TestPlugin2.cpp  TestPlugin2.hpp
code/tests/unit/: CMakeLists.txt  testValidation.cpp
code/tests/unit/ConfigFile/: CMakeLists.txt  testConfigFile.cpp
code/tests/unit/ConfigFile/data/: AppConfig.json  InvalidAppConfig1.json  InvalidAppConfig10.json  InvalidAppConfig13.json  InvalidAppConfig17.json  InvalidAppConfig18.json  InvalidAppConfig2.json  InvalidAppConfig21.json  InvalidAppConfig22.json  InvalidAppConfig23.json  InvalidAppConfig24.json  InvalidAppConfig25.json  InvalidAppConfig26.json  InvalidAppConfig3.json  InvalidAppConfig6.json  InvalidAppConfig8.json  InvalidAppConfig_EnvVarFormat.json  InvalidAppConfig_PluginFilePathFormat.json  InvalidAppConfig_PluginFilePathMissing.json  InvalidAppConfig_PluginFormat.json  InvalidAppConfig_PluginInstanceConfigAndConfigFile.json  InvalidAppConfig_PluginInstanceConfigFile.json  InvalidAppConfig_PluginInstanceConfigFileMissing.json  InvalidAppConfig_PluginInstanceDependenciesFormat.json  InvalidAppConfig_PluginInstanceDependencyFormat.json  InvalidAppConfig_PluginInstanceDependencyName.json  InvalidAppConfig_PluginInstanceDependencyNameDuplicate.json  InvalidAppConfig_PluginInstanceDependencyNameMissing.json  InvalidAppConfig_PluginInstanceName.json  InvalidAppConfig_PluginInstanceNameFormat.json  InvalidAppConfig_PluginInstanceNameMissing.json  InvalidAppConfig_PluginInstancesEmpty.json  InvalidAppConfig_PluginInstancesMissing.json  InvalidAppConfig_PluginMaxVersion.json  InvalidAppConfig_PluginMaxVersionMissing.json  InvalidAppConfig_PluginMinVersion.json  InvalidAppConfig_PluginMinVersionFormat.json  InvalidAppConfig_PluginVersion.json  InvalidAppConfig_PluginVersionMissing.json  InvalidAppConfig_PluginsEmpty.json  (+4 more)
code/tests/unit/PluginConfig/: CMakeLists.txt  testPluginConfig.cpp
code/tests/unit/PluginInstanceConfig/: CMakeLists.txt  testPluginInstanceConfig.cpp
code/tests/unit/PluginManagerConfig/: CMakeLists.txt  TestData.qrc  testPluginManagerConfig.cpp
code/tests/unit/Validation/: CMakeLists.txt  TestData.qrc  testValidation.cpp
code/tests/unit/VersionInfo/: CMakeLists.txt  testVersionInfo.cpp
docs/: Design.md  Requirements.md
docs/ClassDiagrams/: Configuration.class.violet.html  Design.xmi  Plugin.class.violet.html  PluginManagement.class.violet.html  PluginShutdownWorkflow.activity.violet.html  PluginStartupWorkflow.activity.violet.html
docs/Diagrams/: ClassDiagrams.plantuml  FlowCharts.plantuml
